Couple of modifications to make the layout more responsive
There a couple of small issues (IMO) regarding the bootstrap 4 integration and here are the edits that I had to do to make it look fine.

1. If looking closely at the example page with bootstrap 4 styling, we can see the search button is slightly off in the "input-group", removing this margin resolves this issue
2. The height of the inputs in bootstrap 4 give a total of 38px, not 40px. I removed the hardcoded heights so that they follow standard bootstrap heights
3. On smaller screens, the top row really doesn't look good, see the example page https://datatables.net/extensions/searchpanes/examples/styling/bootstrap4.html and make it smaller, the button text overflows and looks really bad. The solution for this is not in the css file edited here but in a modification to the classes applied to the elements.
- For the `dtsp-title` element, it would be preferable to use the `col` class instead of `col-10`, which will let it take as much room as possible, without having a "hard-coded" width.
- For the `dtsp-clearAll` element (the button), it would be better to use `col-auto` instead of `col-1` so that it can expand as required and not overflow like in the example page

I have tested the changes by manually editing the css file (not the scss file) so I could provide a fiddle where we can see the difference if required, but it would be better if a new build was done with the changes in the scss above and tried this way to ensure I didn't mess the chnages when converting from the end css file to the source scss file (shouldn't be the case, but we can never be 100% sure before testing :) )

Sync to source repo @20995743a5ffcb639f6229b06e6bfbe30f75229c

--- a/css/searchPanes.bootstrap4.css
+++ b/css/searchPanes.bootstrap4.css
@@ -57,7 +57,7 @@ div.dtsp-searchPanes {
   clear: both;
 }
 div.dtsp-searchPanes button.btn {
-  margin: 1px;
+  margin: 0;
 }
 div.dtsp-searchPanes button.dtsp-clearAll {
   max-width: 50px;
@@ -95,13 +95,10 @@ div.dtsp-searchPane div.dataTables_wrapper div.row div.dataTables_filter {
 div.dtsp-searchPane div.btn-group {
   padding: 0px;
 }
-div.dtsp-searchPane div.btn-group button.btn {
-  margin: 0;
-  height: 40px;
-}
 div.dtsp-searchPane div.dtsp-topRow {
   padding: 0px !important;
-  margin: 0px !important;
+  margin: 0px;
+  margin-bottom: 0.5rem;
 }
 div.dtsp-searchPane div.dtsp-topRow div.dtsp-subRows {
   padding: 0px !important;
@@ -120,7 +117,6 @@ div.dtsp-searchPane .col-sm-12 {
   padding: 5px;
 }
 div.dtsp-searchPane .input-group {
-  height: 40px !important;
   padding: 0px !important;
 }
 div.dtsp-searchPane .input-group .input-group-append {
@@ -171,12 +167,15 @@ div.dtsp-panes {
 }
 div.dtsp-panes div.dtsp-titleRow {
   padding-bottom: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 div.dtsp-panes div.dtsp-title {
   float: left;
-  margin: 20px;
   margin-bottom: 0px;
   margin-top: 10px;
+  padding-left: 0;
+  padding-right: 0;
 }
 div.dtsp-panes button.dtsp-clearAll {
   float: right;
