Fixed issue with bs4 button widths now that pictures are in use
Jira Issue DD-1527

Sync to source repo @45cdd38bd1d0a0db09671ed7abb99b1ee7a92f22

--- a/css/searchPanes.bootstrap4.css
+++ b/css/searchPanes.bootstrap4.css
@@ -194,6 +194,9 @@ div.dtsp-searchPane div.dtsp-topRow div.dtsp-subRows {
 div.dtsp-searchPane div.dtsp-topRow div.row {
   width: 100%;
 }
+div.dtsp-searchPane div.dtsp-topRow button {
+  min-width: 35px;
+}
 div.dtsp-searchPane thead {
   display: none;
 }
