dev: small bs4 button styling fix
Sync to source repo @4548cc0e903c7a640e69d83d894c034b23cce518

--- a/css/searchPanes.bootstrap4.css
+++ b/css/searchPanes.bootstrap4.css
@@ -196,6 +196,10 @@ div.dtsp-searchPane div.dtsp-topRow div.row {
 }
 div.dtsp-searchPane div.dtsp-topRow button {
   min-width: 35px;
+  max-width: 35px;
+}
+div.dtsp-searchPane div.dtsp-topRow button.clearButton {
+  padding-left: 10px;
 }
 div.dtsp-searchPane thead {
   display: none;
