Styling fixes for bs4
Jira Issue DD-1538

Sync to source repo @3e54bf62f0087eb1841fdef2ea2c5f2764e9b7ac

--- a/css/searchPanes.bootstrap4.css
+++ b/css/searchPanes.bootstrap4.css
@@ -150,6 +150,19 @@ div.dtsp-searchPanes button.dtsp-clearAll {
   max-width: 50px;
 }
 
+div.dtsp-columns-1,
+div.dtsp-columns-2,
+div.dtsp-columns-3,
+div.dtsp-columns-4,
+div.dtsp-columns-5,
+div.dtsp-columns-6,
+div.dtsp-columns-7,
+div.dtsp-columns-8,
+div.dtsp-columns-9 {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
 div.dtsp-searchPane {
   flex-direction: row;
   flex-wrap: nowrap;
@@ -197,6 +210,10 @@ div.dtsp-searchPane div.dtsp-topRow div.row {
 div.dtsp-searchPane div.dtsp-topRow button {
   min-width: 35px;
   max-width: 35px;
+  border: 1px solid #ced4da;
+}
+div.dtsp-searchPane div.dtsp-topRow div.dtsp-subRow2 {
+  margin-left: 5px;
 }
 div.dtsp-searchPane div.dtsp-topRow button.clearButton {
   padding-left: 10px;
@@ -232,6 +249,7 @@ div.dtsp-searchPane div.dataTables_scrollBody table tbody tr span.badge {
   min-width: 30px;
   display: inline-block;
   line-height: 1;
+  margin-top: 3.5px;
 }
 div.dtsp-searchPane div.dataTables_scrollBody table tbody tr td.dtsp-countColumn {
   text-align: right;
@@ -240,6 +258,7 @@ div.dtsp-searchPane .dtsp-searchIcon {
   display: block;
   position: relative;
   padding: 18px 13px;
+  border: 1px solid #ced4da;
 }
 div.dtsp-searchPane div.dataTables_wrapper div.dataTables_filter {
   display: none;
