Progress through dataLength fix
Sync to source repo @2705527219933fb22ec65495b928fc88096dd85d

--- a/css/searchPanes.bootstrap4.css
+++ b/css/searchPanes.bootstrap4.css
@@ -244,8 +244,23 @@ div.dtsp-searchPane div.dataTables_scrollBody {
 div.dtsp-searchPane div.dataTables_scrollBody:hover {
   border: 2px solid #cfcfcf !important;
 }
-div.dtsp-searchPane div.dataTables_scrollBody table tbody tr span.badge {
-  float: right;
+div.dtsp-searchPane div.dataTables_scrollBody table {
+  table-layout: fixed;
+}
+div.dtsp-searchPane div.dataTables_scrollBody table tbody tr td.dtsp-nameColumn {
+  width: 100% !important;
+}
+div.dtsp-searchPane div.dataTables_scrollBody table tbody tr div.dtsp-nameCont {
+  width: 100%;
+}
+div.dtsp-searchPane div.dataTables_scrollBody table tbody tr div.dtsp-nameCont span.dtsp-name {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: inline-block;
+  width: calc(100% - 30px);
+  vertical-align: middle;
+}
+div.dtsp-searchPane div.dataTables_scrollBody table tbody tr div.dtsp-nameCont span.badge {
   min-width: 30px;
   display: inline-block;
   line-height: 1;
