fix: Added an extra couple of lines of css to make the auto ellipsis work
Jira Issue DD-1616

Sync to source repo @720d93cb2c66215284761d48dd4facd9828e6115

--- a/css/searchPanes.bootstrap4.css
+++ b/css/searchPanes.bootstrap4.css
@@ -259,6 +259,7 @@ div.dtsp-searchPane div.dataTables_scrollBody table tbody tr div.dtsp-nameCont s
   display: inline-block;
   width: calc(100% - 30px);
   vertical-align: middle;
+  white-space: nowrap;
 }
 div.dtsp-searchPane div.dataTables_scrollBody table tbody tr div.dtsp-nameCont span.badge {
   min-width: 30px;
