--- a/css/searchPanes.bootstrap4.css
+++ b/css/searchPanes.bootstrap4.css
@@ -216,29 +216,32 @@ div.dtsp-hidden {
   display: none !important;
 }
 
-div.dtsp-searchPane div.dtsp-topRow {
+div.dtsp-panesContainer div.dtsp-searchPane div.dtsp-topRow {
   margin: 0.5em 0;
 }
-div.dtsp-searchPane div.dtsp-topRow div.dtsp-subRow2 {
+div.dtsp-panesContainer div.dtsp-searchPane div.dtsp-topRow div.dtsp-subRow2 {
   margin-left: 0.5em;
 }
-div.dtsp-searchPane div.dtsp-topRow button {
+div.dtsp-panesContainer div.dtsp-searchPane div.dtsp-topRow button {
   border: 1px solid #ced4da;
   width: 35px;
   line-height: 20px;
 }
-div.dtsp-searchPane div.dtsp-topRow div.dtsp-subRow1 button {
+div.dtsp-panesContainer div.dtsp-searchPane div.dtsp-topRow div.dtsp-subRow1 button {
   border-right: none;
 }
-div.dtsp-searchPane div.dataTables_wrapper {
+div.dtsp-panesContainer div.dtsp-searchPane div.dataTables_wrapper {
   border: 2px #f0f0f0 solid;
   border-radius: 4px;
 }
-div.dtsp-searchPane div.dataTables_wrapper:hover {
+div.dtsp-panesContainer div.dtsp-searchPane div.dataTables_wrapper:hover {
   border: 2px solid #cfcfcf !important;
 }
-div.dtsp-searchPane div.dataTables_wrapper div.dtsp-nameCont span.badge {
+div.dtsp-panesContainer div.dtsp-searchPane div.dataTables_wrapper div.dtsp-nameCont span.badge {
   min-width: 30px;
   line-height: 1.25em;
   margin-top: 3.5px;
+}
+div.dtsp-panesContainer button.disabled {
+  cursor: not-allowed;
 }
