fix: Fix typo in doc
Sync to source repo @553a349e1cd9d63008f8dcd97f6cdc1fc55ae4bd

--- a/css/searchPanes.bootstrap4.css
+++ b/css/searchPanes.bootstrap4.css
@@ -23,6 +23,7 @@ div.dtsp-topRow div.dtsp-subRow1 {
 }
 div.dtsp-topRow div.dtsp-subRow1 div.dtsp-searchCont {
   position: relative;
+  width: 100%;
 }
 div.dtsp-topRow div.dtsp-subRow1 input {
   padding-right: 2em;
