--- a/css/searchPanes.bootstrap4.css
+++ b/css/searchPanes.bootstrap4.css
@@ -183,6 +183,7 @@ div.dtsp-panesContainer {
   clear: both;
   padding-left: 0;
   padding-right: 0;
+  text-align: center;
 }
 div.dtsp-panesContainer div.dtsp-searchPanes {
   display: flex;
