Fix URL in Readme

--- a/css/searchPanes.bootstrap4.css
+++ b/css/searchPanes.bootstrap4.css
@@ -250,3 +250,8 @@ div.dtsp-panesContainer div.dtsp-searchPane div.dataTables_wrapper div.dtsp-name
 div.dtsp-panesContainer button.disabled {
   cursor: not-allowed;
 }
+
+div.dt-button-collection div.dtsp-panesContainer {
+  padding-left: 10px;
+  padding-right: 10px;
+}
